2002-08-22  Richard Williamson (Local)  <rjw@apple.com>

        Changed public string from #define to extern NSString.
        
        * WebKit.exp:
        * WebView.subproj/WebController.h:
        * WebView.subproj/WebController.m:
        * WebView.subproj/WebDefaultContextMenuHandler.m:
        (-[WebDefaultContextMenuHandler contextMenuItemsForElement:defaultMenuItems:]):
        (-[WebDefaultContextMenuHandler openNewWindowWithURL:]):
        (-[WebDefaultContextMenuHandler downloadURL:]):
        (-[WebDefaultContextMenuHandler openLinkInNewWindow:]):
        (-[WebDefaultContextMenuHandler downloadLinkToDisk:]):
        (-[WebDefaultContextMenuHandler copyLinkToClipboard:]):
        (-[WebDefaultContextMenuHandler openImageInNewWindow:]):
        (-[WebDefaultContextMenuHandler downloadImageToDisk:]):
        (-[WebDefaultContextMenuHandler copyImageToClipboard:]):
        (-[WebDefaultContextMenuHandler openFrameInNewWindow:]):
        * WebView.subproj/WebHTMLViewPrivate.m:
        (-[WebHTMLView _elementAtPoint:]):
        (-[WebHTMLView _continueAfterCheckingDragForEvent:]):

2002-08-22  Ken Kocienda  <kocienda@apple.com>

	Passing the main load's attributes to the subresource loads causes 
	breakage (most visible when we POST).
	
	Right now, we just rely on flags to handle "back/forward" loads, so
	the attributes were not actually being used.

	A better fix needs to be put in place when the soon-to-be-done 
	attributes/flags rework is done.

        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (+[WebSubresourceClient startLoadingResource:withURL:dataSource:]):

=== Alexander-20 ===

2002-08-21  Richard Williamson (Local)  <rjw@apple.com>

        Simple name change.  Plugin -> NetscapePlugin in anticipation
        of other plugin related API.
        
        Removed vestigal WebDocumentLoading.
        
        * Plugins.subproj/WebPlugin.h:
        * Plugins.subproj/WebPlugin.m:
        (-[WebNetscapePlugin load]):